WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308045
[YARR] Fix operand reversal in non-greedy backreference max count check in JIT
https://bugs.webkit.org/show_bug.cgi?id=308045
Summary
[YARR] Fix operand reversal in non-greedy backreference max count check in JIT
Sosuke Suzuki
Reported
2026-02-17 04:14:56 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-02-17 04:17:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58847
EWS
Comment 2
2026-02-20 02:12:16 PST
Committed
307899@main
(09dc962c7d55): <
https://commits.webkit.org/307899@main
> Reviewed commits have been landed. Closing PR #58847 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-20 02:13:12 PST
<
rdar://problem/170791030
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug